<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".LoginActivity">
<ImageView
    android:id="@+id/imagel"
    android:layout_width="228dp"
    android:layout_height="170dp"
    android:src="@drawable/logo"
    android:transitionName="logo_image"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/hello"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="Hello There!"
        android:transitionName="logo_text"
        android:textColor="#0E7ED8"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="Welcome Back"
        android:id="@+id/welcome"
        android:transitionName="logo_desc"
        android:textStyle="bold"
        android:textColor="#0E7ED8"
        android:textSize="25sp" />
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:textStyle="bold"-->
<!--        android:fontFamily="serif-monospace"-->
<!--        android:text="back"-->
<!--        android:textColor="#0E7ED8"-->
<!--        android:textSize="25sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/phonenumbertxt"
            android:hint="Phone Number"
            android:transitionName="edit_trans"
            android:layout_marginTop="5dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etphonenumber"
                android:inputType="number"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/passwordtxt"
            android:hint="Password"
            android:transitionName="edit_trans"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etpassword"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvForgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="5dp"

            android:text="forgot password?"
            android:textColor="#000000" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textColor="#0E7ED8"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="Sign In"
            ></com.google.android.material.textview.MaterialTextView>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btnlogin"
            android:clickable="true"
            android:transitionName="btn_trans"
            android:src="@drawable/arrow" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Need an account ? "
            android:textAlignment="center"
            android:textColor="#000"
            android:transitionName="already"
            android:id="@+id/textothers"
            android:textStyle="bold" />

        <TextView
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="Register here"
            android:id="@+id/tvSignup"
            android:textAlignment="center"

            android:textColor="#0E7ED8"

            android:textStyle="bold" />

        <Button
            android:visibility="invisible"
            android:id="@+id/btnPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gmail"
            />

        <Button
            android:visibility="invisible"
            android:id="@+id/btnGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gmail"
            />

    </LinearLayout>



</LinearLayout>