<resources>
    <string name="app_name">Bhariya</string>

    <string name="Login_string"> <u>Log in here</u></string>
    <string name="terms"> <u>Privacy Policy &amp; Terms of services </u></string>
    <string name="dialogTitle">Input Error</string>
    <string name="dialogMessage">Note: Password &amp; Confirm Password doesn\'t matches.</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="google">Google</string>
    <string name="male">Male</string>
    <string name="sankhuwasabha">Sankhuwasabha</string>
    <string name="address">Address</string>
    <string name="_9852051425">9852051425</string>
    <string name="phone_number">Phone number</string>
    <string name="sabin_simkhada">Sabin Simkhada</string>
    <string name="verified_name">Verified name</string>
    <string name="gender">Gender</string>
    <string name="todo">TODO</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="where_to">Set your Destination</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm_ride">Confirm Ride</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="confirm_pickup_point">Confirm Pickup</string>
    <string name="address_demo">1010 Kathmandu</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="meet_driver_here">Meetup Point</string>
    <string name="searching_driver">Finding Driver</string>
    <string name="accept_pickup">Accept Ride</string>
    <string name="decline_pickup">Decline Ride</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="begin_ride">Begin Ride</string>
</resources>