...
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/begin_ride"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_meetup"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/confirm_pickup"
                android:textColor="@android:color/white"/>
...
